<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="com.zebracommerce.zcpaymentapi.zcpaymentapi_testharness.MainActivity" >

    <RelativeLayout
        android:id="@+id/relativeLayout"
    	android:background="#ffcc33"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft ="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight ="0dp"
        android:layout_marginTop ="0dp"
        android:layout_marginBottom ="0dp" >

    	<ImageView
    	    android:id="@+id/imageViewLogo"
    	    android:layout_width="120dp"
    	    android:layout_height="40dp"
    	    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    	    android:layout_marginStart="@dimen/activity_horizontal_margin"
	        android:layout_alignParentStart="true"
    	    android:layout_alignParentLeft="true"
    	    android:layout_centerVertical="true"
    	    android:contentDescription="@string/zebracommerce_desc"
    	    android:src="@drawable/zebrahoriz" />
    	
    	<TextView
        	android:id="@+id/editTextTitle"
        	android:background="@android:color/transparent"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_toRightOf="@+id/imageViewLogo"
        	android:layout_toEndOf="@+id/imageViewLogo"
    	    android:layout_centerVertical="true"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingStart="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
			android:paddingEnd="@dimen/activity_horizontal_margin"
        	android:text="@string/app_title"
        	android:ems="10"
        	android:textSize="20sp" />
    		
    </RelativeLayout>
    
    <ImageView
       	android:id="@+id/imageView2"
	   	android:layout_width="fill_parent"
    	android:layout_height="fill_parent"
       	android:src="@drawable/globecolor"
    	android:alpha=".50"
       	android:contentDescription="@string/zebracommerce_desc" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/relativeLayout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin" >

    	<ImageView
    	    android:id="@+id/imageViewResult"
    	    android:layout_width="40dp"
    	    android:layout_height="40dp"
    	    android:layout_alignParentTop="false"
    	    android:layout_alignParentRight="true"
    	    android:layout_alignParentEnd="true"
    	    android:layout_alignTop="@+id/buttonProcess"
    	    android:layout_alignBottom="@+id/buttonProcess"
    	    android:layout_centerVertical="true"
    	    android:contentDescription="@string/zebracommerce_desc"
    	    android:src="@drawable/yes" />
        
		<LinearLayout
		    android:id="@+id/linearLayoutCenterMark"
		    android:layout_width="20dp"
		    android:layout_height="match_parent"
		    android:layout_centerHorizontal="true"
		    android:orientation="horizontal" >
		</LinearLayout>
    	
    	<EditText
            android:id="@+id/editTextAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_toLeftOf="@+id/buttonProcess"
            android:layout_toStartOf="@+id/buttonProcess"
            android:ems="10"
            android:textSize="30sp"
            android:hint="@string/amount" >
            <requestFocus />
        </EditText>
            
        <EditText
            android:id="@+id/editTextReference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toLeftOf="@+id/buttonProcess"
            android:layout_toStartOf="@+id/buttonProcess"
            android:layout_below="@+id/editTextAmount"
            android:inputType="none"
            android:textSize="14sp"
            android:ems="10"
            android:hint="@string/reference" />

        <Button
            android:id="@+id/buttonProcess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/imageViewResult"
            android:layout_toStartOf="@+id/imageViewResult"
            android:layout_alignBottom="@+id/editTextReference"
            android:text="@string/process" />

        <LinearLayout
            android:id="@+id/resultsAndSignature"
            android:layout_below="@+id/editTextReference"
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:layout_centerHorizontal="true"
		    android:orientation="vertical" >
            
	        <TextView
	            android:id="@+id/processResults"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:layout_marginTop="@dimen/activity_vertical_margin"
	    	    android:layout_marginBottom="@dimen/activity_vertical_margin"
	            android:background="@drawable/back_border"
	            android:ems="10"
	            android:gravity="center"
	            android:text="@string/paystatus_processing"
	            android:textSize="14sp" />
	
	    	<LinearLayout
	            android:id="@+id/resultButons"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
	    	    android:orientation="horizontal" >
	    	    
	    	    <Button
        		    android:id="@+id/printScreen"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="@string/printscreen" />
	    	    
	    	    <Button
        		    android:id="@+id/buttonClear"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="@string/clear" />

		        <Button
		            android:id="@+id/buttonDetails"
		            android:layout_width="0dp"
		            android:layout_height="wrap_content"
		            android:layout_weight="1"
		            android:text="@string/details" />
		  	</LinearLayout>
	    	    
        </LinearLayout>
    	
        
	</RelativeLayout>

</RelativeLayout>
